--- a/src/app/activities/[id]/components/activityBody.module.css
+++ b/src/app/activities/[id]/components/activityBody.module.css
@@ -7,7 +7,9 @@
   grid-template-columns: 1fr 1fr;
   gap: 8px;
   max-width: 1200px;
-  height: 534px;
+  width: 100%;
+  max-height: 534px;
+  height: auto;
   margin-bottom: 85px;
   border-radius: 12px;
   overflow: hidden;
@@ -16,12 +18,16 @@
 .bannerImage {
   position: relative;
   width: 100%;
+  max-height: 534px;
   height: 100%;
+  aspect-ratio: 16 / 9;
   overflow: hidden;
 }
 
 .subImageSection {
   display: grid;
+  max-height: 534px;
+  height: 100%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 8px;
@@ -31,17 +37,21 @@
   position: relative;
   width: 100%;
   height: 100%;
+  aspect-ratio: 1 / 1;
   overflow: hidden;
+}
+
+.bodyContainer {
+  width: 100%;
+  display: flex;
+  gap: 26px;
+  justify-content: space-between;
 }
 
 .bodyDetailContainer {
   flex: 1;
-  max-width: 65%;
-}
-
-.bodyContainer {
-  display: flex;
-  justify-content: space-between;
+  max-width: 790px;
+  width: 100%;
 }
 
 .bodyDetail {
@@ -86,6 +96,9 @@
 }
 
 .map {
+  width: 100%;
+  height: 450px;
+  border-radius: 16px;
 }
 
 .location {
@@ -95,7 +108,7 @@
 
 .reservationCard {
   position: relative;
-  width: 30%;
+  width: 384px;
   height: auto;
   margin-bottom: auto;
   padding: 20px;
@@ -107,9 +120,90 @@
   top: 80px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
+  .imageSection {
+    gap: 4px;
+    width: 100%;
+    max-width: 100%;
+    min-width: 696px;
+  }
+  
+  .subImageSection {
+    gap: 4px;
+  }
+  
+  .bodyContainer {
+    gap: 0px;
+  }
 
+  .reservationCard {
+    width: 251px;
+  }
 }
 
-@media (max-width: 375x) {
+@media (max-width: 768px) {
+  .bannerImage{
+    height: 310px;
+  }
+
+  .subImage {
+    height: 310px;
+  }
+
+  .customSlider {
+    width: 100vw;
+    margin-left: -24px;
+    margin-right: -24px;
+  }
+
+  .customSlider :global(.slick-dots) {
+    position: absolute;
+    bottom: 10px;
+    display: flex !important;
+    justify-content: center;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    z-index: 10;
+  }
+
+  .customSlider :global(.slick-dots li) {
+    margin: 0 5px;
+  }
+  
+  .customSlider :global(.slick-dots button) {
+    width: 12px;
+    height: 6px;
+    border-radius: 4px;
+    border: none;
+    background: var(--gray);
+    text-indent: -9999px;
+    overflow: hidden;
+  }
+  
+  :global(.slick-dots li.slick-active button) {
+    background: var(--gray-dark);
+  }
+
+  .bodyDetail {
+    border-top: none;
+  }
+  
+  .reservationCard {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    right: 0;
+    left: 0;
+    top: auto;
+    height: 83px;
+    padding: 0 17px;
+    border-radius: 0;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 10;
+  }
 }
