--- a/src/app/activities/[id]/components/reservationCard.module.css
+++ b/src/app/activities/[id]/components/reservationCard.module.css
@@ -84,13 +84,28 @@
   line-height: 32px;
 }
 
-@media (max-width: 1199) {
+.successModal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.successModalButton {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 80px;
+  height: 30px;
+  font-weight: 500 !important;
+}
+
+@media (max-width: 1200) {
   .dateLabel {
     margin-bottom: 5px;
   }
 }
 
-@media (max-width: 767) {
+@media (max-width: 768) {
   .reservationContainer {
     display: flex;
     align-items: center;
