--- a/src/app/activities/[id]/components/CalendarModal.module.css
+++ b/src/app/activities/[id]/components/CalendarModal.module.css
@@ -19,6 +19,7 @@
   background-color: white;
   border: 1px solid var(--gray-lighter);
   box-shadow: 0 4px 16px color-mix(in srgb, var(--nomad-black) 10%, transparent);
+  z-index: 10;
 }
 
 .tabletModalHeader {
@@ -46,7 +47,9 @@
 .mobileModal {
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   border-radius: 0 !important;
+  margin: 0 !important;
 }
 
 .mobileModalHeader {
