--- a/src/app/activities/[id]/components/reservationCard.module.css
+++ b/src/app/activities/[id]/components/reservationCard.module.css
@@ -88,14 +88,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 !important;
+  min-width: 540px !important;
+  min-height: 250px !important;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
 }
 
 .successModalButton {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
-  width: 80px;
-  height: 30px;
+  bottom: 30px;
+  right: 24px;
+  width: 120px;
+  height: 48px;
   font-weight: 500 !important;
 }
 
@@ -152,5 +159,19 @@
   .OKButton {
     width: 100%;
     height: 56px;
+  }
+
+  .successModal {
+    min-width: 368px !important;
+    min-height: 204px !important;
+  }
+  
+  .successModalButton {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 100px;
+    height: 40px;
+    font-weight: 500 !important;
   }
 }
